--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,659 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+:root{
+  --green- :#3DFEAE;
+  --blue-:#00A8E8;
+  --grey:#F0F0F0;
+  --black:#1A1A1D;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  width: 100%;
+  height: 100vh;
+  /* background: linear-gradient(to left, #139f9f 40%, #ffffff 60%);; */
+  /* justify-content: center; */
+  background-color: #F0F0F0;
+  overflow: scroll;
+  
+}
+
+
+
+.header {
+  background-color:#1A1A1D;
+  color: white;
+  height: 75px;
+ 
+}
+.header-button {
+  
+  display: flex;
+  justify-content: center;
+  padding: 30px;
+  gap: 30px;
+  font-size: 20px;
+  /* padding: 25px; */
+  
+}
+
+.h-button:hover {
+  color: #3DFEAE;
+}
+
+/* footer section */
+
+.footer {
+  margin: 10px 0;
+  background-color: #1A1A1D;
+  max-width: 100%;
+  height: 30vh;
+  display: flex;
+  justify-content: space-around;
+  padding: 15px 0;
+  
+
+
+}
+
+h3 {
+  color:white;
+  font-size: large;
+  font-weight: 700;
+}
+
+.social-media-section {
+  color: white;
+  padding: 10px;
+}
+
+.company-section {
+  color: white;
+  padding: 10px;
+}
+.f-button:hover {
+  color: var(--green-);
+}
+
+
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  /* margin-top: 10px; */
+  height: 100vh;
+  width: 100%;
+  align-content:center ;
+
+  
+}
+
+.boy-img {
+  width: 400px;
+  height: 400px;
+}
+
+.paragraph {
+  width: 50%;
+  /* font-size: 40px;
+  font-weight: 800;
+  margin: 10px 0; */
+  
+}
+
+.para {
+  width: 70%;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.para span {
+  font-size: 30px;
+  font-weight: 800;
+  color: #00A8E8;
+}
+
+.home-contact-button {
+  margin: 10px 0;
+  padding: 10px;
+  color: #FFF;
+  background-color: #00A8E8;
+}
+
+.home-contact-button:hover{
+background-color: #3DFEAE;
+}
+
+/* *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+.contact {
+  justify-content: center;
+  display: flex;
+  width: 100%;
+  max-height: 100%;
+}
+
+.contact-page {
+  
+  background-color: var(--green-);
+
+  width: 600px;
+  height: 600px;
+  padding: 12px 8px;
+  margin: 20px 0;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+
+}
+
+.contact-page-h1 {
+  margin-top: 0px;
+  font-size: 30px;
+  font-weight: 500;
+  text-align: center;
+  color: var(--grey);
+}
+
+form {
+  margin: 15px;
+
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: black;
+  font-size: 20px;
+  color: var(--black);
+}
+
+.form-group input, .form-group textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid black;
+  border-radius: 4px;
+  background-color: var(--grey);
+}
+
+.submit-button {
+  text-align: left;
+  display: inline-block;
+  padding: 12px;
+  background-color: var(--blue-);
+  font-size: 20px;
+  font-weight: 600;
+  border-radius: 4px;
+  width: 100%;
+  text-align: center;
+  color: #FFF;
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background-color: blue;
+}
+
+
+/* skill section */
+
+.skill-full-page {
+  width: 100%;
+  height: 100vh;
+  align-content:center ;
+ 
+}
+
+p {
+  font-size: 18px;
+  color: black;
+}
+
+.skill-container h1{
+  font-size: 30px;
+  margin: 10px 0;
+  font-weight: bold;
+  color: var(--blue-);
+
+}
+
+.skill-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 40px 30px;
+  margin: 40px auto;
+  width: 70%;
+  height: 70vh;
+  border: 2px solid ;
+  border-color: var(--blue-);
+}
+
+.skill {
+  display: flex;
+}
+
+.skill-list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-top: 0px;
+    
+}
+
+.skill-level {
+  background-color: rgb(204, 202, 202);
+  width: 100%;
+  height: 30px;
+  border-radius: 25px;
+  position: relative;
+}
+
+.skill-bar {
+  background-color: var(--green-);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+}
+
+.html {
+  width: 85%;
+  animation: html 1.25s forwards;
+}
+
+.css {
+  width: 60%;
+  animation: css 1.25s forwards;
+}
+
+.typescript {
+  width: 50%;
+  animation: typescript 1.25s forwards;
+}
+
+.nextjs{
+  width: 35%;
+  animation: nextjs 1.25s forwards;
+}
+
+@keyframes html {
+  0%{
+    width: 0%;
+  }
+   100%{
+    width: 85%;
+  }
+}
+
+@keyframes css {
+  0%{
+    width: 0%;
+  }
+   100%{
+    width: 60%;
+  }
+}
+
+@keyframes typescript {
+  0%{
+    width: 0%;
+  }
+   100%{
+    width: 50%;
+  }
+}
+
+@keyframes nextjs {
+  0%{
+    width: 0%;
+  }
+   100%{
+    width: 35%;
+  }
+}
+
+
+/* about page */
+
+.about-paragraph {
+  align-content:center ;
+  width: 100%;
+  height: 100vh;
+}
+
+.about-paragraph h2 {
+  font-size: 40px;
+  font-weight: 600;
+  margin: 15px 0;
+  text-align: center;
+}
+
+.boy-img-about {
+  margin: 20px auto 0;
+  width: 200px;
+  
+}
+
+.about-para span {
+  font-size: 35px;
+  font-weight: 600;
+  display: block;
+  text-align: center;
+  color: var(--blue-);
+}
+
+.about-para {
+  margin: 20px auto 0;
+  width: 60%;
+  font-size: 25px;
+  font-weight: 400;
+}
+
+
+/* responsive */
+
+
+
+@media only screen and (min-width:640px) {
+  
+  
+  /* home page */
+
+  .boy-img {
+    width: 300px;
+    height: 300px;
+  }
+  
+  .paragraph {
+    width: 100%;
+    justify-content: center;
+    padding: 40px;
+    margin-top: 20px;
+    
+  }
+  
+  .para {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  
+  .para span {
+    font-size: 25px;
+    font-weight: 600;
+    color: #00A8E8;
+    margin-top: 20px;
+  }
+  
+  .home-contact-button {
+    width: 100%;
+  }
+
+   /* about page */
+
+   .about-paragraph {
+    align-content:center ;
+    width: 100%;
+    height: 100vh;
+    
+    
+  }
+  
+  .boy-img-about {
+    width: 200px;
+    margin-bottom: 20px;
+  }
+  
+  .about-para span {
+    font-size: 35px;
+    font-weight: 400;
+    text-align: center;
+    color: var(--blue-);
+    width: 100%;
+    text-align: left;
+    
+    
+  }
+  
+  .about-para {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 35px;
+  }
+
+
+  /* contact page */
+
+  
+.contact {
+  margin: 20px auto
+}
+
+.contact-page {
+  background-color: var(--green-);
+  width: 500px;
+  height: 500px;
+  padding: 6px 6px;
+  margin: 30px auto;
+}
+
+form {
+  margin: 8px;
+}
+
+.form-group input, .form-group textarea {
+  padding: 6px;
+}
+
+}
+
+
+@media only screen and (min-width:375px) {
+
+  body{
+    flex-wrap: wrap;
+  }
+
+
+  /* home page */
+
+  
+.portfolio {
+  width: 100%;
+  height: 110vh;
+  margin: 10px 0;
+  margin-bottom: 10px;
+}
+
+.boy-img {
+  width: 200px;
+  height: 200px;
+}
+
+.paragraph {
+  width: 100%;
+  padding: 20px;
+}
+
+.para {
+  width: 100%;
+  font-size: 20px;
+  font-weight: 500;
+
+}
+
+.para span {
+  font-size: 26px;
+  font-weight: 600;
+
+}
+
+.home-contact-button {
+  width: 100%;
+}
+
+
+/* header / Footer */
+
+
+.header {
+  background-color:#1A1A1D;
+  color: white;
+  height: 75px;
+ 
+}
+.header-button {
+  
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  /* padding: 30px; */
+  gap: 30px;
+  font-size: 15px;
+  /* margin: 20px; */
+  /* padding: 25px; */
+  
+}
+
+.h-button:hover {
+  color: #3DFEAE;
+}
+
+/* footer section */
+
+.footer {
+  margin: 10px 0;
+  height: 40vh;
+
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: 750;
+}
+
+/* skills */
+
+.skill-full-page {
+  width: 100%;
+  height: 100vh;
+  align-content:center ;
+  
+  margin-top: 30px;
+  margin-bottom: 10px;
+ 
+}
+
+.skill-container {
+  padding: 40px 15px;
+  margin: 10px auto;
+  width: 80%;
+  height: 50vh;
+}
+
+/* contact us */
+
+.contact-page {
+  width: 300px;
+  height: 400px;
+  padding: 4px 2px;
+  margin: 20px auto;
+}
+
+.contact-page-h1 {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  color: var(--grey);
+}
+
+form {
+  margin: 7px;
+
+}
+
+.form-group {
+  margin-bottom: 7px;
+}
+
+.form-group label {
+  margin-bottom: 5px;
+  font-size: 12px;
+}
+
+.form-group input, .form-group textarea {
+  width: 100%;
+  padding: 6px;
+  border-radius: 4px;
+}
+
+.submit-button {
+  padding: 8px;
+  font-size: 12px;
+  font-weight: 400;
+  border-radius: 4px;
+}
+
+/* about us page */
+
+
+.about-paragraph {
+  align-content:center ;
+  width: 100%;
+  height: 100vh;
+  margin: 10px auto;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.about-paragraph h2 {
+  font-size: 30px;
+  font-weight: 500;
+  /* margin: 7px auto; */
+  text-align: center;
+}
+
+.boy-img-about {
+  margin: 10px auto;
+  width: 200px;
+  
+}
+
+.about-para span {
+  font-size: 25px;
+  font-weight: 500;
+  text-align: center;
+  color: var(--blue-);
+  width: 100%;
+}
+
+.about-para {
+  /* margin: 5px auto; */
+  width: 100%;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 10px 20px;
+}
+
+
+
 }
